added user id to session

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "typeRoots": ["./types", "./node_modules/@types"],
   },
   "include": [
     "next-env.d.ts",
@@ -28,6 +29,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/(home)/articles/edit/[articleId]"
-  ],
+, "app/(home)/_components/navbar.tsx"  ],
   "exclude": ["node_modules"]
 }
