WIP: Edit Articles

--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@tiptap/extension-character-count": "^2.1.16",
+    "@tiptap/extension-color": "^2.1.16",
+    "@tiptap/extension-highlight": "^2.1.16",
+    "@tiptap/extension-text-align": "^2.1.16",
+    "@tiptap/extension-text-style": "^2.1.16",
+    "@tiptap/pm": "^2.1.16",
+    "@tiptap/react": "^2.1.16",
+    "@tiptap/starter-kit": "^2.1.16",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
