--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@tanstack/react-table": "^8.11.7",
     "@tiptap/extension-character-count": "^2.1.16",
     "@tiptap/extension-color": "^2.1.16",
     "@tiptap/extension-highlight": "^2.1.16",
