--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "diff": "^5.1.0",
     "dompurify": "^3.0.8",
     "lucide-react": "^0.309.0",
     "mongoose": "^8.0.4",
