--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cmdk": "^0.2.0",
     "diff": "^5.1.0",
     "dompurify": "^3.0.8",
+    "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.309.0",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
