--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18",
     "react-diff-view": "^3.2.0",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
